--- a/DailyProgrammer-Template/DailyProgrammer-Template/DailyProgrammer-Template.csproj
+++ b/DailyProgrammer-Template/DailyProgrammer-Template/DailyProgrammer-Template.csproj
@@ -60,11 +60,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="EasyWordsWithEnemies.cs" />
+    <Compile Include="IntermediateRailFenceCipher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
